# BitFun

./: AGENTS-CN.md  AGENTS.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  Cargo.toml  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cli-package-manual.yml
docs/architecture/: agent-runtime-services-design.md  cache-friendly-message-structure.md  cli-product-line-design.md  core-decomposition.md  deep-review.md  i18n.md  model-request-cache-reuse.md  peer-device-mode.md  product-architecture.md  theme-token-optimization.md
docs/development/: i18n.md  ui-testids-CN.md  ui-testids.md
docs/plans/: core-decomposition-completed.md  core-decomposition-plan.md  opencode-extension-compatibility-plan.md  product-architecture-evolution-plan.md
scripts/: audit-cli-theme-colors.mjs  audit-cli-theme-colors.test.mjs  audit-theme-colors.mjs  audit-theme-colors.test.mjs  check-core-boundaries.mjs  generate-startup-theme-bootstrap.mjs  i18n-audit.mjs  i18n-contract.test.mjs  i18n-governance-baseline.json  i18n-literal-fallback-baseline.json  i18n-locale-format-baseline.json  prepare-lan-monitor.mjs  theme-color-audit-utils.mjs  theme-color-governance-baseline.cli.json  theme-color-governance-baseline.installer.json  theme-color-governance-baseline.json  theme-color-governance-baseline.mobile-web.json  theme-css-var-contract.mjs
src/crates/product-capabilities/: AGENTS.md  Cargo.toml
src/crates/product-capabilities/src/: lib.rs
src/crates/product-capabilities/tests/: product_capabilities.rs
(+854 files in other folders)
