[package]
name = "bitfun-product-capabilities"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "BitFun product capability pack contracts"

[lib]
name = "bitfun_product_capabilities"
crate-type = ["rlib"]

[dependencies]
bitfun-harness = { path = "../harness" }
bitfun-runtime-ports = { path = "../runtime-ports" }
bitfun-tool-packs = { path = "../tool-packs", default-features = false }
